Basic setup is done for v1
